--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,13 @@
         <div class="col-3 img"></div>
         <div id="xcard" class="card col-3"></div>
         <div class="button col 1">
-          <button id="button2">Int 10s</button>
           <button id="button">New Card</button>
+          <button id="button2">Int 10s</button>
           <button id="button3">Stop Int</button>
           <input type="text" placeholder="width" id="ancho" name="width" />
           <input type="text" placeholder="heigth" id="alto" name="heigth" />
+          <button id="button4">Resize</button>
+          <button id="button5">Reset Size</button>
         </div>
       </div>
     </div>
