--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,25 @@
   <body>
     <div class="container">
       <div class="padre row">
-        <div class="col-3"></div>
+        <div class="col-1"></div>
         <div class="col-3 img"></div>
         <div id="xcard" class="card col-3"></div>
-        <div class="button col 1">
+        <div class="button col-2">
           <button id="button">New Card</button>
           <button id="button2">Int 3s</button>
           <button id="button3">Stop Int</button>
-          <input type="text" placeholder="width" id="ancho" name="width" />
-          <input type="text" placeholder="heigth" id="alto" name="heigth" />
+          <input
+            type="text"
+            placeholder="      Enter width"
+            id="ancho"
+            name="width"
+          />
+          <input
+            type="text"
+            placeholder="      Enter heigth"
+            id="alto"
+            name="heigth"
+          />
           <button id="button4">Resize</button>
           <button id="button5">Reset Size</button>
         </div>
